[package]
name = "zc2"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "ZakuroAI CLI"

[dependencies]
clone = "0.1.2"
colored = "2.0.0"
command-macros = "0.2.9"
html5ever = "0.22.5"
ifaces = "0.1.0"
lazy_static = "1.4.0"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_yaml = "0.9.19"
soup = "0.5.1"
toml = "0.8.0"
built = { version = "0.7", features = ["chrono", "semver"] }

[build-dependencies]
built = { version = "0.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }
